# core

./: .clang-format  .gitattributes  .gitignore  .gitmessage  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  SERIALIZATION_REFACTOR_REGEXES.MD  biogears.code-workspace  biogears.sublime-project  docker-compose.yml  gen-website  resharper.DotSettings  vi
cmake/packaging/: CMakeLists.txt  COPYRIGHT.txt  Info.plist  README.txt
projects/: CMakeLists.txt
projects/Python/: CMakeLists.txt
projects/__gendata/: CMakeLists.txt
projects/__gendata/src/: DataSetReader.cpp
projects/__genstates/: CMakeLists.txt  Nutrition.csv  Stabilization.csv  Tissue.csv
projects/__genstates/src/: gen-states.cpp  stateGenerator.cpp
projects/biogears/: .swp  CMakeLists.txt  ReadScenarios.cpp
projects/biogears-common/: CMakeLists.txt
projects/biogears-common/unit/: test_common_Angles.cpp  test_common_Billboard.cpp  test_common_BioGearsScenarioExec.cpp  test_common_CompoundUnit.cpp  test_common_ConcurrentBoundedQueue.cpp  test_common_ConcurrentQueue.cpp  test_common_ConcurrentRingbuffer.cpp  test_common_Option.cpp  test_common_OwningMutex.cpp  test_common_Path.cpp  test_common_Result.cpp  test_common_ScMpChannel.cpp  test_common_ScSpChannel.cpp  test_common_StopWatch.cpp  test_common_StopWatchf.cpp  test_common_StringManipulation.cpp  test_common_ThreadPoll.cpp  test_common_WorkChannel.cpp  test_common_scmp_channel.cpp  test_common_string_manipulation.cpp  test_core_Billboard.cpp  test_core_BioGearsScenarioExec.cpp  test_core_CompoundUnit.cpp  test_core_ConcurrentBoundedQueue.cpp  test_core_ConcurrentQueue.cpp  test_core_ConcurrentRingbuffer.cpp  test_core_Option.cpp  test_core_OwningMutex.cpp  test_core_Result.cpp  test_core_SEBloodChemistrySystem.cpp  test_core_SEScalar.cpp  test_core_SEScalarAmount.cpp  test_core_SEScalarAreaPerTimePressure.cpp  test_core_SEScalarElectricCapacitance.cpp  test_core_SEScalarElectricCharge.cpp  test_core_SEScalarElectricInductance.cpp  test_core_SEScalarEnergy.cpp  test_core_SEScalarFlowCompliance.cpp  test_core_SEScalarFlowInertance.cpp  test_core_SEScalarFlowResistance.cpp  (+24 more)
projects/biogears/libBiogears/: CMakeLists.txt
projects/biogears/libCDM/: CMakeLists.txt
projects/biogears/libCircuitTest/: CMakeLists.txt
projects/biogears/libIO/: CMakeLists.txt
projects/biogears/libJNI/: CMakeLists.txt
projects/biogears/libPY/: CMakeLists.txt  README.md
projects/biogears/swig_bindings/: CMakeLists.txt
projects/biogears/unit/: main.cpp
projects/circuit_profiler/: CMakeLists.txt  README.MD
projects/circuit_profiler/src/: BioGearsCircuitProfiler.cpp  BioGearsCircuitProfiler.h  main.cpp
projects/circuit_test/: CMakeLists.txt
projects/circuit_test/src/: biogears_circuit_tester.cpp  biogears_circuit_tester.h  circuit_tester.h  main.cpp
projects/cli/: CMakeLists.txt  README.MD  bg-cli-main.cpp  bg-cli.aps  bg-cli.rc  bg-scenario-main.cpp
projects/cmd_bio/: CMakeLists.txt  README.md
projects/cmd_bio/src/: CDMDriver.cpp  CDMDriver.h  ConfigFileParser.hpp  ConfigParser.hpp  DataSetReader.cpp  DataSetReader.h  GenData.cpp  GenData.h  GenStates.h  PatientValidationGenerator.cpp  ScenarioDriver.cpp  ScenarioDriver.h  StateGenerator.h  TestDriver.cpp  argumentparser.hpp  cmd_bio_main.cpp  main.cpp  stateGenerator.cpp
projects/cmd_bio/unit/: test_cmdline_cmd_bio.cpp
projects/howto/: CMakeLists.txt  README.md
projects/howto/AirwayObstruction/: CMakeLists.txt
projects/howto/AnesthesiaMachine/: CMakeLists.txt
projects/howto/Asthma/: CMakeLists.txt
projects/howto/BolusDrug/: CMakeLists.txt
projects/howto/BrainInjury/: CMakeLists.txt
projects/howto/COPD/: CMakeLists.txt
projects/howto/CPR/: CMakeLists.txt
projects/howto/ConcurrentEngines/: CMakeLists.txt
projects/howto/ConsumeNutrients/: CMakeLists.txt
projects/howto/CreateAPatient/: CMakeLists.txt
projects/howto/EngineUse/: CMakeLists.txt
projects/howto/EnvironmentChange/: CMakeLists.txt
projects/howto/Exercise/: CMakeLists.txt
projects/howto/Fasciculation/: CMakeLists.txt
projects/howto/Hemorrhage/: CMakeLists.txt
projects/howto/InfusionDrug/: CMakeLists.txt
projects/howto/LobarPneumonia/: CMakeLists.txt
projects/howto/MechanicalVentilation/: CMakeLists.txt
projects/howto/PainStimulus/: HowTo-PainStimulus.cpp  main.cpp
projects/howto/PatientGeneration/: README.md
projects/howto/PulmonaryFunctionTest/: CMakeLists.txt
projects/howto/RunScenario/: CMakeLists.txt
projects/howto/SarinExposure/: CMakeLists.txt
projects/howto/SceanrioBase/: CMakeLists.txt
projects/howto/SepsisDynamic/: CMakeLists.txt
projects/howto/Smoke/: CMakeLists.txt
projects/howto/TensionPneumothorax/: CMakeLists.txt
projects/howto/ThreadedBioGears/: CMakeLists.txt
projects/howto/VasopressinShockTherapy/: CMakeLists.txt
projects/howto/common-source/: Arguments.cpp  Arguments.h  HowTo-ThreadedBioGears.cpp  HowTo-ThreadedBioGears.h  HowToTracker.cpp  HowToTracker.h
projects/java/: CMakeLists.txt
projects/java/biogears/: BioGears_manifest.txt  CMakeLists.txt
projects/java/cdm/: CMakeLists.txt
projects/java/engine/: CMakeLists.txt
projects/java/gui/: .classpath  .project  CMakeLists.txt
projects/java/howto/: CMakeLists.txt
projects/java/schema/: CMakeLists.txt
projects/papers/JOSS/: paper.bib  paper.md
projects/playschool/: CMakeLists.txt  bg-cli-main.cpp  bg-scenario-main.cpp
projects/playschool/include/: asio.hpp
projects/playschool/src/: main.cpp
projects/python/: CMakeLists.txt
projects/python/biogears/: CMakeLists.txt
projects/python/cdm/: CMakeLists.txt
projects/python/schema/: CMakeLists.txt
projects/scenario_driver/: CMakeLists.txt  README.MD
projects/scenario_driver/src/: BioGearsScenarioDriver.cpp  BioGearsScenarioDriver.h  Verification.cpp  Verification.h
projects/test_driver/: CMakeLists.txt
projects/test_driver/src/: TestDriver.cpp  TestDriver.h  Verification.cpp  Verification.h  main.cpp  (+2 more)
projects/unit/: CMakeLists.txt
projects/website/: CMakeLists.txt  requirements.txt
projects/zip/: CMakeLists.txt
(+5110 files in other folders)
